<resources>
    <string name="app_name">Students Assistant</string>
    <string name="notes">Notes</string>
    <string name="notes_input">InputNotes</string>
    <string name="reminder">Reminder</string>
    <string name="reminder_input">InputReminder</string>
    <string name="account">Account</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="not_login">You are not signed in yet</string>
    <string name="button_login">Login</string>
    <string name="button_signup">Sign up Here</string>
    <string name="username">Username</string>
    <string name="password" />
    <string name="passwordinput">Password</string>
    <string name="usernameinput">Username</string>
    <string name="format_item">Text Format</string>
    <string name="gallery_item">Gallery</string>
    <string name="scratch_item">Scratch</string>
    <string name="splashtext">"Welcome to Student's Assistant!"
        "Take notes, create reminder, get your assignments measured! We will help you feel more organized!"</string>
    <string name="setting">Setting</string>
    <string name="logout">LOGOUT</string>
    <string name="change_account">Change Account</string>
    <string name="settings">Settings</string>
    <string name="settings_notif">Notifications</string>
    <string name="settings_alarm">Alarm</string>
    <string name="settings_general">General</string>
    <string name="settings_system">System</string>
    <string name="settings_appearance">Appearance</string>
    <string name="settings_sound">Sound</string>
    <string name="settings_timer">Sleep Timer</string>
    <string name="account_user">User</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
