<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_notes">

    <fragment
        android:id="@+id/navigation_notes"
        android:name="com.uc.finalproject.ui.notes.NotesFragments"
        android:label="@string/notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/navigation_notes_input"
        android:name="com.uc.finalproject.ui.notes_input.inputNotesFragments"
        android:label="@string/notes_input"
        tools:layout="@layout/fragment_notes_input" />

    <fragment
        android:id="@+id/navigation_reminder"
        android:name="com.uc.finalproject.ui.reminder.ReminderFragments"
        android:label="@string/reminder"
        tools:layout="@layout/fragment_reminder" />

    <fragment
        android:id="@+id/navigation_reminder_input"
        android:name="com.uc.finalproject.ui.reminder_input.inputReminderFragments"
        android:label="@string/reminder_input"
        tools:layout="@layout/fragment_reminder_input" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.uc.finalproject.ui.reminder.ReminderFragments"
        android:label="@string/account"
        tools:layout="@layout/fragment_account" />
</navigation>