<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <CheckBox
                android:id="@+id/notif_check"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="40dp"
                android:paddingLeft="20dp"
                android:text="@string/settings_notif"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_settings" />

            <CheckBox
                android:id="@+id/alarm_check"
                android:layout_width="0dp"
                android:layout_height="69dp"
                android:layout_marginLeft="30dp"
                android:layout_marginTop="20dp"
                android:paddingLeft="20dp"
                android:text="@string/settings_alarm"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notif_check" />

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar_settings"
                android:layout_width="409dp"
                android:layout_height="wrap_content"
                android:background="@color/colorBlue"
                android:minHeight="?attr/actionBarSize"
                android:theme="?attr/actionBarTheme"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:title="@string/settings"
                app:titleTextColor="#F6F5F5" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="12dp"
                android:text="@string/settings_general"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar_settings" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="40dp"
                android:layout_marginTop="64dp"
                android:text="@string/settings_system"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/alarm_check" />

            <TextView
                android:id="@+id/appearance"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:focusable="auto"
                android:focusableInTouchMode="true"
                android:paddingLeft="50dp"
                android:text="@string/settings_appearance"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView3" />

            <TextView
                android:id="@+id/sound"
                android:layout_width="0dp"
                android:layout_height="43dp"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:paddingLeft="50dp"
                android:text="@string/settings_sound"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appearance" />

            <TextView
                android:id="@+id/timer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="28dp"
                android:clickable="true"
                android:paddingLeft="50dp"
                android:text="@string/settings_timer"
                android:textColor="#000000"
                android:textSize="24sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/sound" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

</FrameLayout>